--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,4 +1,4 @@
-<!--pages/my/my.wxml-->
+<!-- pages/my/my.wxml -->
 <view class='container'>
   <view class='user-infos-wrap'>
     <view class='user-infos'>
@@ -7,7 +7,11 @@
       <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
       <view class='row'>
         <image class="sm_icon" src='/images/bookMark_active.png'></image>
-        <text class='infos-desc'>已有<text class="num">{{gold}}</text>张书签</text>
+        <view class='infos-desc'>
+          <text>已有</text>
+          <text class="num">{{gold}}</text>
+          <text>张书签</text>
+        </view>
       </view>
       <view class='row num-row'>
         <view class="num-item">
@@ -25,24 +29,59 @@
       </view>
     </view>
   </view>
-  <view class="footer">
-    <view class='menu-item' bindtap='toMyCollect'>
-      <image class="img" src='/images/star-border-icon.png'></image>
-      <text class='menu-title'>我的收藏 <text class="collectNum">({{collectNum}})</text></text>
-      <view class='cart-right'></view>
+  <view class="card-wrap">
+    <wux-cell-group wux-class="nobgc">
+      <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
+        <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
+          <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
+            <view class="sm-btn btn" bindtap="bindReceive">领取</view>
+          </view>
+        </wux-media>
+      </view>
+    </wux-cell-group>
+  </view>
+  <view class="menu-wrap">
+    <view class="menu">
+      <view class='menu-item' bindtap='toDailyTask'>
+        <image class="img" src='/images/star-border-icon.png'></image>
+        <view class='menu-title'>今日任务</view>
+        <view class='right'>
+          <view class="badge">
+            <wux-badge dot />
+          </view>
+          <view class="cart"></view>
+        </view>
+      </view>
     </view>
-    <view class='menu-item' bindtap="toOrderList">
-      <image class="img" src='/images/myorder-icon.png'></image>
-      <text class='menu-title'>我的订单</text>
-      <view class='cart-right'></view>
-    </view>
-    <view class='menu-item'>
-      <image class="img" src='/images/contact-icon.png'></image>
-      <text class="menu-title">联系客服</text>
-      <!-- <text class="desc">回复“1”加交流群</text> -->
-      <view class='cart-right'></view>
-      <button open-type='contact' class="btn-session" session-from='weapp'>
-      </button>
+  </view>
+  <view class="menu-wrap">
+    <view class="menu">
+      <view class='menu-item' bindtap="toOrderList">
+        <image class="img" src='/images/myorder-icon.png'></image>
+        <text class='menu-title'>我的订单</text>
+        <view class='right'>
+          <view class="cart"></view>
+        </view>
+      </view>
+      <view class='menu-item' bindtap='toMyCollect'>
+        <image class="img" src='/images/star-border-icon.png'></image>
+        <view class='menu-title'>
+          我的收藏
+          <text class="collectNum">({{collectNum}})</text>
+        </view>
+        <view class='right'>
+          <view class="cart"></view>
+        </view>
+      </view>
+      <view class='menu-item'>
+        <image class="img" src='/images/contact-icon.png'></image>
+        <text class="menu-title">联系客服</text>
+        <!-- <text class="desc">回复“1”加交流群</text> -->
+        <view class='right'>
+          <view class="cart"></view>
+        </view>
+        <button open-type='contact' class="btn-session" session-from='weapp'></button>
+      </view>
     </view>
   </view>
 </view>
