--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,148 +1,231 @@
 /* pages/my/my.wxss */
 
 .container {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
+    background: #F5F5F5;
 }
 
+
+/* 个人信息卡start */
+
 .user-infos-wrap {
-  width: 100%;
-  height: 480rpx;
-  box-sizing: border-box;
-  padding: 30rpx;
-  background: linear-gradient(to bottom, #e2c699, #faf8f6);
+    /* width: 100%; */
+    /* height: 480rpx; */
+    box-sizing: border-box;
+    margin: 30rpx;
+    /* background: linear-gradient(to bottom, #e2c699, #faf8f6); */
 }
 
 .user-infos {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fff;
-  border-radius: 30rpx;
-  padding: 30rpx;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 20rpx;
+    padding: 30rpx;
 }
 
 .openbtn {
-  display: flex;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 100%;
-  width: 100%;
-  z-index: 2;
+    display: flex;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 100%;
+    width: 100%;
+    z-index: 2;
 }
 
 .header_img {
-  height: 130rpx;
-  width: 130rpx;
-  border-radius: 50%;
-  overflow: hidden;
-  z-index: 1;
-  background: #ccc;
+    height: 130rpx;
+    width: 130rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    z-index: 1;
+    background: #ccc;
 }
 
 .user-name {
-  font-weight: bold;
-  font-size: 30rpx;
-  height: 40rpx;
-  margin: 10rpx 0;
-  width: 100%;
-  text-align: center;
+    font-weight: bold;
+    font-size: 30rpx;
+    height: 40rpx;
+    margin: 10rpx 0;
+    width: 100%;
+    text-align: center;
 }
 
 .num {
-  color: #cf9f73;
-  font-weight: bold;
-  padding: 0 8rpx;
+    color: #cf9f73;
+    font-weight: bold;
+    padding: 0 8rpx;
 }
 
 .infos-desc {
-  margin-left: 10rpx;
-  display: inline-block;
-  color: #8e8e93;
+    margin-left: 10rpx;
+    display: inline-block;
+    color: #8e8e93;
 }
 
 .num-row {
-  width: 100%;
-  margin-top: 40rpx;
+    width: 100%;
+    margin-top: 40rpx;
 }
 
 .num-item {
-  width: 33%;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
+    width: 33%;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.num-item > text:first-child {
-  color: #333;
-  font-weight: bold;
-  font-size: 34rpx;
+.num-item>text:first-child {
+    color: #333;
+    font-weight: bold;
+    font-size: 34rpx;
 }
 
-.num-item > text:last-child {
-  color: #c7c7cb;
+.num-item>text:last-child {
+    color: #c7c7cb;
 }
+
+
+/* 个人卡end */
+
+
+/* 列表媒体对象start */
+
+.card-wrap {
+    padding: 0 30rpx;
+}
+
+.nobgc>view {
+    background: transparent !important;
+}
+
+.sm-btn {
+    width: 130rpx;
+    height: 60rpx;
+    line-height: 60rpx;
+    border-radius: 30rpx;
+    font-size: 30rpx;
+    color: #fff;
+    padding: 0 10rpx;
+    background: linear-gradient(to right, #e2c597, #cf9f73);
+}
+
+.media-wrap {
+    margin: 0rpx auto;
+    border-radius: 20rpx;
+    /* width: 90%; */
+    background: #ffffff;
+    box-shadow: 0rpx 0rpx 30rpx 10rpx rgb(233, 233, 233);
+}
+
+
+/* 媒体对象自定义内容 */
+
+.center-right {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.btn-wrap {
+    padding-right: 30rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.time {
+    color: rgb(136, 136, 136);
+    font-size: 24rpx;
+    margin-top: 10rpx;
+}
+
+
+/* 列表媒体对象end */
+
 
 /* menu */
-.footer {
-  margin-top: 20rpx;
-  background-color: #fff;
-  padding-bottom: 20rpx;
+
+.menu-wrap {
+    /* width: 100%; */
+    box-sizing: border-box;
+    margin: 30rpx;
+    overflow: hidden;
+}
+
+.menu {
+    background-color: #fff;
+    /* padding-bottom: 20rpx; */
+    border-radius: 20rpx;
 }
 
 .menu-item {
-  height: 100rpx;
-  line-height: 100rpx;
-  display: flex;
-  margin: 0 20rpx;
-  margin-right: 0;
-  flex-direction: row;
-  align-items: center;
-  position: relative;
-  border-bottom: 1rpx solid #f2f2f2;
-  padding: 0 20rpx;
+    height: 100rpx;
+    line-height: 100rpx;
+    display: flex;
+    /* margin: 0 20rpx; */
+    margin-right: 0;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    /* border-bottom: 1rpx solid #f2f2f2; */
+    padding: 0 20rpx;
 }
 
 .menu-item .img {
-  width: 36rpx;
-  height: 36rpx;
+    width: 36rpx;
+    height: 36rpx;
 }
 
-.menu-item .cart-right {
-  position: absolute;
-  right: 30rpx;
-  width: 18rpx;
-  height: 18rpx;
-  border-top: 4rpx solid #8e8e93;
-  border-right: 4rpx solid #8e8e93;
-  transform: rotate(45deg);
+.menu-item .right {
+    position: absolute;
+    right: 20rpx;
+    height: 18rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.menu-item .badge {
+    margin-right: 20rpx;
+}
+
+.menu-item .cart {
+    width: 18rpx;
+    height: 18rpx;
+    border-top: 4rpx solid #8e8e93;
+    border-right: 4rpx solid #8e8e93;
+    transform: rotate(45deg);
 }
 
 .menu-item .menu-title {
-  color: #424242;
-  font-size: 32rpx;
-  margin: 0 30rpx;
+    color: #424242;
+    font-size: 32rpx;
+    margin: 0 20rpx;
 }
 
 .menu-item .desc {
-  color: #c5c5c5;
-  position: absolute;
-  right: 30rpx;
+    color: #c5c5c5;
+    position: absolute;
+    right: 30rpx;
 }
 
 .btn-session {
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  position: absolute;
-  right: 0;
-  top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .collectNum {
-  color: #C7C7CB;
-  /* padding: 0 8rpx; */
+    color: #C7C7CB;
+    padding: 0 6rpx;
 }
