首页界面V2版本

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,128 +1,96 @@
-<!--index.wxml-->
+<!-- index.wxml -->
 <view class="container">
   <scroll-view scroll-y="true" style="height: {{windowHeight}}px;" scroll-with-animation="true" bindscrolltolower="loadMoreData" scroll-into-view="{{toView}}">
     <!-- 轮播图 -->
     <view class='banner-wrap' wx:if="{{bannerData.length}}">
-      <swiper class='banner' indicator-dots="{{true}}" autoplay="{{true}}" interval="5000" circular='{{true}}' catchtap="onSwiperTap">
-        <block wx:for="{{bannerData}}" wx:key='index'>
-          <!-- 外部跳转 -->
-          <navigator wx:if="{{item[5] == 1 && item[7] !=''}}" target="miniProgram" open-type="navigate" path='{{item[4]}}' app-id='{{item[7]}}'>
-            <swiper-item>
-              <image class="banner-img" src="{{item[3]}}"></image>
-            </swiper-item>
-          </navigator>
-          <!-- 内部跳转 -->
-          <navigator wx:elif="{{item[5] == 1 && item[7] ==''}}" open-type="switchTab" url='{{item[4]}}'>
-            <swiper-item>
-              <image class="banner-img" src="{{item[3]}}"></image>
-            </swiper-item>
-          </navigator>
-        </block>
-      </swiper>
-    </view>
-    <!-- 菜单导航 -->
-    <view class="menu-wrap">
-      <view class='bubble-tips-wrap' wx:if='{{isTaskTips && !isInvitation}}' >
-        <view class="bubble-tips">
-          <view class="bubble-icon-wrap">
-            <image class='xs_icon bubble-icon' src="/images/bookMark_active.png"></image>
-          </view>
-        </view>
-        <view class='caret'></view>
-        <text class="bubble-tips-text" style=''>做任务赚书签</text>
-        <view class="close" bindtap="hideTaskTips" style=''></view>
-      </view>
-      <view class='bubble-tips-wrap' wx:if='{{isReAwardTips && isInvitation}}' >
-        <view class="bubble-tips">
-          <view class="bubble-icon-wrap">
-            <image class='xs_icon bubble-icon' src="/images/bookMark_active.png"></image>
-          </view>
-        </view>
-        <view class='caret'></view>
-        <text class="bubble-tips-text" style=''>有奖励可领取</text>
-        <view class="close" bindtap="hideReAwardTips" style=''></view>
-      </view>
-      <!-- hideReAwardTips -->
-      <view class='menu'>
-        <view class='menu-item' bindtap="toDailyTask">
-          <image class='icon' src="/images/calendar-icon.png"></image>
-          <text class="menu-item-text">每日任务</text>
-        </view>
-        <view class='menu-item' bindtap="toShopMall">
-          <image class='icon' src="/images/mall-icon.png"></image>
-          <text class="menu-item-text">换购商城</text>
-        </view>
-        <view class='menu-item' bindtap="toWheel">
-          <image class='icon' src="/images/wheel-icon.png"></image>
-          <text class="menu-item-text">幸运转盘</text>
-        </view>
-      </view>
-    </view>
-    <view class='row-board'></view>
-    <!-- 内容 -->
-    <!-- 标题横向滑动 -->
-    <scroll-view id="awardId" scroll-x="true" class="nav" scroll-left="{{navScrollLeft}}" scroll-with-animation="{{true}}">
-      <block wx:for="{{contentGroupList}}" wx:for-index="idx" wx:for-item="navItem" wx:key="idx">
-        <view class="nav-item {{currentTab == idx?'active':''}}" data-current="{{idx}}" data-postgroupid="{{navItem[0]}}" bindtap="switchNav">
-          {{navItem[1]}}
-          <view class="slider-wrap" wx:if="{{currentTab == idx}}">
-            <view class="navbar_slider"></view>
-          </view>
-        </view>
-      </block>
-    </scroll-view>
-    <view class='tab-content'>
-      <block wx:for="{{contentList}}" wx:for-index="index" wx:key="index">
-        <view class="media-item-wrap">
-          <view class='media-item' data-url="{{item[8]}}" data-id="{{item[0]}}" data-ruleid="{{item[11]}}" catch:tap="clickArticle">
-            <image class='item-img' src="{{item[2]}}"></image>
-            <view class='item-infos'>
-              <text class='infos-title'>{{item[1]}}</text>
-              <view class='row'>
-                <text>阅读{{item[9]}}</text>
-                <view class='oper-container'>
-                  <view class='icon-wrap share' data-shareurl="{{item[8]}}" data-shareArtid="{{item[0]}}" catchtap="showShareBoard">
-                    <!-- <button open-type='share' catch:tap="preventBubble" data-shareurl="{{item[8]}}" data-className="item-share"></button> -->
-                    <text>分享</text>
-                    <image class='xs_icon' src="/images/share-icon.png"></image>
+      <swiper class='banner' indicator-dots="{{false}}" autoplay="{{false}}" previous-margin="60rpx" next-margin="60rpx" circular='{{false}}' catchtap="onSwiperTap">
+        <swiper-item>
+          <view class="card-wrap">
+            <view class="card-title">本周分享免费听</view>
+            <view class="card-body">
+              <view class="list">
+                <view class="list-item">
+                  <view class="img">
+                    <image class="" src="https://soure.chudianad.com/static/welfare/product/thumbImg/201811191551200805.jpg" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                    <view class="label-wrap">
+                      <view class="label-bcg"></view>
+                      <view class="label">原价: 18书签</view>
+                    </view>
                   </view>
-                  <view class='icon-wrap' data-id="{{item[0]}}" data-iscollected="{{item[10]}}" catchtap='{{isDeal?"preventBubble":"toggleCollect"}}'>
-                    <block wx:if="{{item[10] == 0}}">
-                      <text>收藏</text>
-                      <image class='xs_icon' src="/images/star-icon.png"></image>
-                    </block>
-                    <block wx:else>
-                      <text>取消收藏</text>
-                      <image class='xs_icon' src="/images/star-icon-collected.png"></image>
-                    </block>
+                </view>
+                <view class="list-item">
+                  <view class="img">
+                    <image class="" src="https://soure.chudianad.com/static/welfare/product/thumbImg/201811191551200805.jpg" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                    <view class="label-wrap">
+                      <view class="label-bcg"></view>
+                      <view class="label">原价: 18书签</view>
+                    </view>
+                  </view>
+                </view>
+                <view class="list-item">
+                  <view class="img">
+                    <image class="" src="https://soure.chudianad.com/static/welfare/product/thumbImg/201811191551200805.jpg" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                    <view class="label-wrap">
+                      <view class="label-bcg"></view>
+                      <view class="label">原价: 18书签</view>
+                    </view>
+                  </view>
+                </view>
+                <view class="list-item">
+                  <view class="img">
+                    <image class="" src="https://soure.chudianad.com/static/welfare/product/thumbImg/201811191551200805.jpg" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                    <view class="label-wrap">
+                      <view class="label-bcg"></view>
+                      <view class="label">原价: 18书签</view>
+                    </view>
                   </view>
                 </view>
               </view>
             </view>
+            <view class="btn-container">
+              <view class="large-btn">免费领取</view>
+            </view>
           </view>
-        </view>
-      </block>
+        </swiper-item>
+        <swiper-item>
+          <view class="card-wrap">
+            <!-- <view class="card-title">本周分享免费听</view> -->
+            <view class="card-body">
+              <view class="card-infos">
+                <image class="img" src="https://soure.chudianad.com/static/welfare/product/thumbImg/201811191552198110.jpg" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                <view class="title">罗马人的故事</view>
+                <view class="author">盐野七生</view>
+                <view class="price">10书签/本</view>
+                <view class="desc">
+                  《罗马人的故事》是2011年中信出版社出版的图书，作者是 (日)盐野七生，主要描述1300多年间罗马从诞生到灭亡的历史。
+                </view>
+              </view>
+            </view>
+            <view class="btn-container">
+              <view class="large-btn">点击兑换</view>
+            </view>
+          </view>
+        </swiper-item>
+        <swiper-item>
+          <view class="card-wrap"></view>
+        </swiper-item>
+      </swiper>
     </view>
   </scroll-view>
 </view>
-
 <!-- 签到面板 -->
 <signinmodal modal-hidden="{{isSignedModal}}" bindsignIn="signIn" bindgetUserInfo="getUserInfofromCom" modal-msg="{{signInfo}}" sign-days="{{signDays}}" auth-level="{{authLevel}}" is-signed="{{isSigned}}" />
-
 <!-- 弹窗 -->
 <!-- 签到成功 -->
 <popup modal-hidden="{{tipsModal}}" modal-title="恭喜" award="{{signAward}}" modal-type="1" bindtoView="toAwardView"></popup>
-
 <!-- 奖励成功 -->
 <popup modal-hidden="{{showAwardPass}}" modal-title="恭喜" award="{{passAward}}" is-checked="{{passTipschecked}}" bindtoView="toAwardView"></popup>
 <!-- 奖励失败 -->
 <popup modal-hidden="{{showAwardFail}}" modal-title="提示" tips="{{failAward}}" is-checked="{{failTipschecked}}" btn-type="2" record-read="{{recordRead}}" bindtoView="toAwardView"></popup>
-
 <!-- 专属海报 -->
 <share-poster modal-hidden="{{isPosterModal}}" img-url="{{shareImgUrl}}"></share-poster>
 <!-- 分享面板 -->
 <share-board modal-hidden="{{isShareBoard}}" putshareurl="{{putshareurl}}" putshareartid="{{putshareartid}}" bindshowPosterModal="showPosterModal"></share-board>
-
 <!-- 首次提醒阅读 -->
 <view class="modal-mask" bindtap="hideReadTips" catchtouchmove="preventTouchMove" wx:if="{{readTips}}"></view>
 <view class='modal modal-read-tips' catchtouchmove="preventTouchMove" wx:if="{{readTips}}">
@@ -132,7 +100,6 @@
   </view>
   <view class='btn-know' bindtap='hideReadTips'>知道了</view>
 </view>
-
 <!-- 气泡 -->
 <!-- <view class='bubble-tips-wrap' hidden='{{istoptips}}'>
   <view class="bubble-tips">
@@ -142,3 +109,15 @@
   <text class="bubble-tips-text" style=''>做任务赚书签</text>
   <view class="close" style=''></view>
 </view> -->
+<!-- <block wx:for="{{bannerData}}" wx:key='index'>
+          <navigator wx:if="{{item[5] == 1 && item[7] !=''}}" target="miniProgram" open-type="navigate" path='{{item[4]}}' app-id='{{item[7]}}'>
+            <swiper-item>
+              <image class="banner-img" src="{{item[3]}}"></image>
+            </swiper-item>
+          </navigator>
+          <navigator wx:elif="{{item[5] == 1 && item[7] ==''}}" open-type="switchTab" url='{{item[4]}}'>
+            <swiper-item>
+              <image class="banner-img" src="{{item[3]}}"></image>
+            </swiper-item>
+          </navigator>
+        </block> -->
