--- a/pages/reading/reading.wxss
+++ b/pages/reading/reading.wxss
@@ -7,11 +7,12 @@
     /* padding-top: 10rpx; */
 }
 
-::-webkit-scrollbar {
+
+/* ::-webkit-scrollbar {
     width: 0;
     height: 0;
     color: transparent;
-}
+} */
 
 .card-wrap {
     padding: 10rpx 0;
